# CliffordCUDA

./: .gitignore  LICENSE  README.md  pyproject.toml
_shared/: _cayley.py  _einsum_refs.py  _rotor_apply_helpers.py
benchmark/: _harness.py
benchmark/ga/: plot_improvements.py  print_tables.py
benchmark/ga/memory/: bench_geom_prod.py  bench_geom_prod_bwd.py  bench_inner_prod.py  bench_inner_prod_bwd.py  bench_left_contract.py  bench_left_contract_bwd.py  bench_regressive_prod.py  bench_regressive_prod_bwd.py  bench_right_contract.py  bench_right_contract_bwd.py  bench_rotor_apply.py  bench_rotor_apply_bwd.py  bench_rotor_apply_compose_inference.py  bench_rotor_apply_compose_training.py  bench_wedge_prod.py  bench_wedge_prod_bwd.py
benchmark/ga/speed/: bench_geom_prod.py  (+15 more)
benchmark/scripts/: regen_plots.sh  regen_tables.sh  run_all.sh  run_memory.sh  run_product.sh  run_speed.sh
figures/: tables.md
src/cliffordcuda/: __init__.py  _config.py  _validate.py  algebra.py  layers.py
tests/: _gradcheck.py  conftest.py
tests/correctness/: test_dual.py  test_geom_prod.py  test_geom_prod_tiled.py  test_inner_prod.py  test_inverse.py  test_left_contract.py  test_norm_sq.py  test_pqr.py  test_products_tiled.py  test_regressive_prod.py  test_right_contract.py  test_rotor_apply.py  test_wedge_prod.py
tests/gradcheck/: test_grad_geom_prod.py  test_grad_geom_prod_multik.py  test_grad_inner_prod.py  test_grad_inner_prod_multik.py  test_grad_left_contract.py  test_grad_regressive_prod.py  test_grad_right_contract.py  test_grad_wedge_prod.py  test_grad_wedge_prod_multik.py
(+42 files in other folders)
